--- a/demo2/src/main/resources/static/pages/login.html
+++ b/demo2/src/main/resources/static/pages/login.html
@@ -75,9 +75,6 @@
                 </span>
               </div>
 
-              <div class="notice" data-i18n="demo_note">
-                ※ 지금은 화면 완성용(데모) 로그인입니다. 백엔드 연결 시 실제 인증으로 바뀝니다.
-              </div>
             </div>
           </div>
         </div>
@@ -92,7 +89,7 @@
   </div>
   <script src="../assets/app.js"></script>
   <script>
-    const API_BASE = "http://localhost:8083";
+    const API_BASE = "";
 
     // 로그인 페이지 들어올 때마다 이전 로그인 정보 깔끔하게 지우기
     localStorage.removeItem("userId");
