--- a/demo2/src/main/resources/static/pages/profile.html
+++ b/demo2/src/main/resources/static/pages/profile.html
@@ -229,7 +229,7 @@
 
   <!-- 🔹 실제 DB와 연결되는 프로필 로직 -->
   <script>
-    const API_BASE = "http://localhost:8083";
+    const API_BASE = "";
 
     const userId = localStorage.getItem("userId");
     const userName = localStorage.getItem("userName");
