--- a/demo2/src/main/resources/static/pages/signup.html
+++ b/demo2/src/main/resources/static/pages/signup.html
@@ -122,7 +122,7 @@
 
     <script src="../assets/app.js"></script>
     <script>
-      const API_BASE = "http://localhost:8083";
+      const API_BASE = "";
 	  const form          = document.getElementById("signupForm");
 	  const nameInput     = document.getElementById("inputName");
 	  const emailInput    = document.getElementById("inputEmail");
