--- a/demo2/src/main/resources/static/pages/planner.html
+++ b/demo2/src/main/resources/static/pages/planner.html
@@ -118,8 +118,21 @@
     </script>
 
     <script>
-      const API_BASE = "http://localhost:8083";
+      const API_BASE = "";
       let currentPreviewPlan = null;
+
+      function plannerCacheKey(uid, lang){ return `HM_PLANNER_CACHE_v1_${uid}_${lang}`; }
+      function savePlannerCache(uid, lang, data){
+        try{ sessionStorage.setItem(plannerCacheKey(uid, lang), JSON.stringify({ ts: Date.now(), data })); }catch(e){}
+      }
+      function readPlannerCache(uid, lang){
+        try{
+          const raw = sessionStorage.getItem(plannerCacheKey(uid, lang));
+          if(!raw) return null;
+          const obj = JSON.parse(raw);
+          return obj && obj.data ? obj.data : null;
+        }catch(e){ return null; }
+      }
 
       function langParam(){
         const raw = (localStorage.getItem("lang") || localStorage.getItem("hm_lang") || "ko").toString().trim().toLowerCase();
@@ -157,6 +170,16 @@
         el.style.display = "block";
       }
 
+      async function safeFetchWithTimeout(url, opts={}, ms=6500){
+        const ctrl = new AbortController();
+        const id = setTimeout(()=>ctrl.abort(), ms);
+        try{
+          return await fetch(url, { ...opts, signal: ctrl.signal });
+        }finally{
+          clearTimeout(id);
+        }
+      }
+
       document.addEventListener("DOMContentLoaded", () => {
         loadPlanner();
         document.getElementById("generatePlanBtn").addEventListener("click", previewWeeklyPlan);
@@ -168,23 +191,54 @@
       });
 
       async function loadPlanner(){
-        const res = await fetch(`${API_BASE}/api/planner/current?userId=${encodeURIComponent(uid())}&lang=${encodeURIComponent(langParam())}`);
-        if(!res.ok){ showEmptyPlanner(); return; }
+        const u = uid();
+        const l = langParam();
 
-        const data = await res.json();
-        console.log("[planner/current]", data);
-
-        if(!data || !Array.isArray(data.days) || data.days.length === 0){
-          showEmptyPlanner();
-          return;
+        // 1) render cached instantly
+        const cached = readPlannerCache(u, l);
+        if(cached && Array.isArray(cached.days) && cached.days.length){
+          showPlannerHeaderDate(cached.startDate);
+          renderPlannerDays(cached.days);
+          renderShoppingList(Array.isArray(cached.shoppingList) ? cached.shoppingList : []);
+          setPlannerStatus(msg("status_loaded"));
+          HM.applyI18n();
         }
 
-        showPlannerHeaderDate(data.startDate);
-        renderPlannerDays(data.days);
-        renderShoppingList(Array.isArray(data.shoppingList) ? data.shoppingList : []);
+        // 2) refresh from server (but don't break UI if slow)
+        try{
+          const res = await safeFetchWithTimeout(
+            `${API_BASE}/api/planner/current?userId=${encodeURIComponent(u)}&lang=${encodeURIComponent(l)}`,
+            {},
+            6500
+          );
 
-        setPlannerStatus(msg("status_loaded"));
-        HM.applyI18n();
+          if(!res.ok){
+            if(cached) return; // keep cached UI
+            showEmptyPlanner();
+            return;
+          }
+
+          const data = await res.json();
+          console.log("[planner/current]", data);
+
+          if(!data || !Array.isArray(data.days) || data.days.length === 0){
+            if(cached) return;
+            showEmptyPlanner();
+            return;
+          }
+
+          showPlannerHeaderDate(data.startDate);
+          renderPlannerDays(data.days);
+          renderShoppingList(Array.isArray(data.shoppingList) ? data.shoppingList : []);
+          savePlannerCache(u, l, data);
+
+          setPlannerStatus(msg("status_loaded"));
+          HM.applyI18n();
+        }catch(e){
+          // timeout / network error: keep cached
+          if(cached) return;
+          showEmptyPlanner();
+        }
       }
 
       function showPlannerHeaderDate(startDate){
@@ -199,10 +253,9 @@
         else document.getElementById("planner-month").textContent = `${sd.getMonth()+1}월`;
       }
 
-      // ✅ 요청: empty 영역에 AI 버튼 없음
       function showEmptyPlanner(){
         document.getElementById("planner-date-chip").style.display="none";
-		
+        document.getElementById("planner-days").innerHTML = "";
         document.getElementById("shopping-list").innerHTML = `
           <div class="empty-basket">
             <div class="empty-ic" aria-hidden="true">🥕</div>
@@ -210,7 +263,6 @@
           </div>
         `;
         document.getElementById("shopping-count").textContent = "";
-
         setPlannerStatus(msg("status_none"));
         HM.applyI18n();
       }
@@ -223,7 +275,11 @@
         setPlannerStatus(msg("status_generating"));
 
         try{
-          const res = await fetch(`${API_BASE}/api/planner/preview?userId=${encodeURIComponent(uid())}&lang=${encodeURIComponent(langParam())}`, { method:"POST" });
+          const res = await safeFetchWithTimeout(
+            `${API_BASE}/api/planner/preview?userId=${encodeURIComponent(uid())}&lang=${encodeURIComponent(langParam())}`,
+            { method:"POST" },
+            20000
+          );
           if(!res.ok){ setPlannerStatus(""); alert("AI 생성 실패"); return; }
 
           const data = await res.json();
@@ -256,11 +312,15 @@
         setPlannerStatus(msg("saving"));
 
         try{
-          const res = await fetch(`${API_BASE}/api/planner/save?userId=${encodeURIComponent(uid())}&lang=${encodeURIComponent(langParam())}`,{
-            method:"POST",
-            headers:{"Content-Type":"application/json"},
-            body: JSON.stringify(currentPreviewPlan)
-          });
+          const res = await safeFetchWithTimeout(
+            `${API_BASE}/api/planner/save?userId=${encodeURIComponent(uid())}&lang=${encodeURIComponent(langParam())}`,
+            {
+              method:"POST",
+              headers:{"Content-Type":"application/json"},
+              body: JSON.stringify(currentPreviewPlan)
+            },
+            15000
+          );
 
           if(!res.ok){ alert("저장 실패"); return; }
 
@@ -274,6 +334,7 @@
             showPlannerHeaderDate(payload.startDate);
             renderPlannerDays(payload.days);
             renderShoppingList(Array.isArray(payload.shoppingList) ? payload.shoppingList : []);
+            savePlannerCache(uid(), langParam(), payload); // update cache
           }else{
             await loadPlanner();
           }
@@ -285,7 +346,6 @@
         }
       }
 
-      // ✅ 여기만 최소 수정: preview에서는 day.mealTitles가 없으니 meals[].dishName으로 fallback
       function renderPlannerDays(days){
         const container = document.getElementById("planner-days");
         container.innerHTML = "";
@@ -336,7 +396,6 @@
         });
       }
 
-      // ✅ 쇼핑 체크 상태 저장
       function shopKey(){
         const y = document.getElementById("planner-year")?.textContent || "y";
         const m = document.getElementById("planner-month")?.textContent || "m";
