--- a/demo2/src/main/resources/static/pages/profile-setup.html
+++ b/demo2/src/main/resources/static/pages/profile-setup.html
@@ -189,7 +189,7 @@
 
   <!-- 🔹 프로필 저장/이동 로직 -->
   <script>
-    const API_BASE = "http://localhost:8083";
+    const API_BASE = "";
 
     const userId = localStorage.getItem("userId");
     if (!userId) {
